exports[`switch-case-braces > invalid(1): switch(foo) {\n\tdefault: {\n\t\tdoSomething();\n\t}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	default: {
  3 | 		doSomething();
  4 | 	}
  5 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo) {\n\tdefault: {\n\t\tdoSomething();\n\t}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default: {
    | 	         ^ Unnecessary braces in case clause.
  3 | 		doSomething();
  4 | 	}
  5 | }

Output:
  1 | switch(foo) {
  2 | 	default:
  3 | 		doSomething();
  4 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo) {\n\tdefault:\n\t\tdoSomething();\n} 1`] = `

  1 | switch(foo) {
  2 | 	default:
  3 | 		doSomething();
  4 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo) {\n\tdefault:\n\t\tdoSomething();\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default:
    | 	^^^^^^^^ Missing braces in case clause.
  3 | 		doSomething();
  4 | }

Output:
  1 | switch(foo) {
  2 | 	default: {
  3 | 		doSomething();
  4 | 	}
  5 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo){\n\tcase 1: {\n\t}\n\tcase 2: {\n\t}\n\tdefault: {\n\t\tdoSomething();\n\t}\n} 1`] = `

  1 | switch(foo){
  2 | 	case 1: {
  3 | 	}
  4 | 	case 2: {
  5 | 	}
  6 | 	default: {
  7 | 		doSomething();
  8 | 	}
  9 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo){\n\tcase 1: {\n\t}\n\tcase 2: {\n\t}\n\tdefault: {\n\t\tdoSomething();\n\t}\n} 2`] = `

Message:
  1 | switch(foo){
> 2 | 	case 1: {
    | 	        ^ Unexpected braces in empty case clause.
  3 | 	}
  4 | 	case 2: {
  5 | 	}
  6 | 	default: {
  7 | 		doSomething();
  8 | 	}
  9 | }

Output:
  1 | switch(foo){
  2 | 	case 1:
  3 | 	case 2: {
  4 | 	}
  5 | 	default: {
  6 | 		doSomething();
  7 | 	}
  8 | }

`;

exports[`switch-case-braces > invalid(1): switch(foo){\n\tcase 1: {\n\t}\n\tcase 2: {\n\t}\n\tdefault: {\n\t\tdoSomething();\n\t}\n} 3`] = `

Message:
  1 | switch(foo){
  2 | 	case 1: {
  3 | 	}
> 4 | 	case 2: {
    | 	        ^ Unexpected braces in empty case clause.
  5 | 	}
  6 | 	default: {
  7 | 		doSomething();
  8 | 	}
  9 | }

Output:
  1 | switch(foo){
  2 | 	case 1: {
  3 | 	}
  4 | 	case 2:
  5 | 	default: {
  6 | 		doSomething();
  7 | 	}
  8 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo) {\n\tcase 1: {\n\t\tdoSomething();\n\t}\n\tbreak; // <-- This should be between braces;\n} 1`] = `

  1 | switch(foo) {
  2 | 	case 1: {
  3 | 		doSomething();
  4 | 	}
  5 | 	break; // <-- This should be between braces;
  6 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo) {\n\tcase 1: {\n\t\tdoSomething();\n\t}\n\tbreak; // <-- This should be between braces;\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	case 1: {
    | 	^^^^^^^ Missing braces in case clause.
  3 | 		doSomething();
  4 | 	}
  5 | 	break; // <-- This should be between braces;
  6 | }

Output:
  1 | switch(foo) {
  2 | 	case 1: { {
  3 | 		doSomething();
  4 | 	}
  5 | 	break; // <-- This should be between braces;
  6 | 	}
  7 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo) {\n\tdefault: {\n\t\t/* block comment */ doSomething();\n\t}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	default: {
  3 | 		/* block comment */ doSomething();
  4 | 	}
  5 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo) {\n\tdefault: {\n\t\t/* block comment */ doSomething();\n\t}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default: {
    | 	         ^ Unnecessary braces in case clause.
  3 | 		/* block comment */ doSomething();
  4 | 	}
  5 | }

Output:
  1 | switch(foo) {
  2 | 	default:
  3 | 		/* block comment */ doSomething();
  4 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo){\n\tcase 1: {\n\t\t// fallthrough\n\t}\n\tdefault: {\n\t}\n\t// fallthrough\n\tcase 3: {\n\t\tdoSomething();\n\t\tbreak;\n\t}\n} 1`] = `

   1 | switch(foo){
   2 | 	case 1: {
   3 | 		// fallthrough
   4 | 	}
   5 | 	default: {
   6 | 	}
   7 | 	// fallthrough
   8 | 	case 3: {
   9 | 		doSomething();
  10 | 		break;
  11 | 	}
  12 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo){\n\tcase 1: {\n\t\t// fallthrough\n\t}\n\tdefault: {\n\t}\n\t// fallthrough\n\tcase 3: {\n\t\tdoSomething();\n\t\tbreak;\n\t}\n} 2`] = `

Message:
   1 | switch(foo){
>  2 | 	case 1: {
     | 	        ^ Unexpected braces in empty case clause.
   3 | 		// fallthrough
   4 | 	}
   5 | 	default: {
   6 | 	}
   7 | 	// fallthrough
   8 | 	case 3: {
   9 | 		doSomething();
  10 | 		break;
  11 | 	}
  12 | }

Output:
   1 | switch(foo){
   2 | 	case 1:
   3 | 		// fallthrough
   4 | 	default: {
   5 | 	}
   6 | 	// fallthrough
   7 | 	case 3: {
   8 | 		doSomething();
   9 | 		break;
  10 | 	}
  11 | }

`;

exports[`switch-case-braces > invalid(2): switch(foo){\n\tcase 1: {\n\t\t// fallthrough\n\t}\n\tdefault: {\n\t}\n\t// fallthrough\n\tcase 3: {\n\t\tdoSomething();\n\t\tbreak;\n\t}\n} 3`] = `

Message:
   1 | switch(foo){
   2 | 	case 1: {
   3 | 		// fallthrough
   4 | 	}
>  5 | 	default: {
     | 	         ^ Unexpected braces in empty case clause.
   6 | 	}
   7 | 	// fallthrough
   8 | 	case 3: {
   9 | 		doSomething();
  10 | 		break;
  11 | 	}
  12 | }

Output:
   1 | switch(foo){
   2 | 	case 1: {
   3 | 		// fallthrough
   4 | 	}
   5 | 	default:
   6 | 	// fallthrough
   7 | 	case 3: {
   8 | 		doSomething();
   9 | 		break;
  10 | 	}
  11 | }

`;

exports[`switch-case-braces > invalid(3): switch(foo) {\n\tdefault: {\n\t\t{\n\t\t\tconst bar = 2;\n\t\t\tdoSomething();\n\t\t}\n\t\tdoSomethingElse();\n\t}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	default: {
  3 | 		{
  4 | 			const bar = 2;
  5 | 			doSomething();
  6 | 		}
  7 | 		doSomethingElse();
  8 | 	}
  9 | }

`;

exports[`switch-case-braces > invalid(3): switch(foo) {\n\tdefault: {\n\t\t{\n\t\t\tconst bar = 2;\n\t\t\tdoSomething();\n\t\t}\n\t\tdoSomethingElse();\n\t}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default: {
    | 	         ^ Unnecessary braces in case clause.
  3 | 		{
  4 | 			const bar = 2;
  5 | 			doSomething();
  6 | 		}
  7 | 		doSomethingElse();
  8 | 	}
  9 | }

Output:
  1 | switch(foo) {
  2 | 	default:
  3 | 		{
  4 | 			const bar = 2;
  5 | 			doSomething();
  6 | 		}
  7 | 		doSomethingElse();
  8 | }

`;

exports[`switch-case-braces > invalid(3): switch(foo) {\n\tdefault:\n\t\tlabel: {}\n} 1`] = `

  1 | switch(foo) {
  2 | 	default:
  3 | 		label: {}
  4 | }

`;

exports[`switch-case-braces > invalid(3): switch(foo) {\n\tdefault:\n\t\tlabel: {}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default:
    | 	^^^^^^^^ Missing braces in case clause.
  3 | 		label: {}
  4 | }

Output:
  1 | switch(foo) {
  2 | 	default: {
  3 | 		label: {}
  4 | 	}
  5 | }

`;

exports[`switch-case-braces > invalid(4): switch(foo) {\n\tcase 1: {\n\t\tbreak;\n\t}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	case 1: {
  3 | 		break;
  4 | 	}
  5 | }

`;

exports[`switch-case-braces > invalid(4): switch(foo) {\n\tcase 1: {\n\t\tbreak;\n\t}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	case 1: {
    | 	        ^ Unnecessary braces in case clause.
  3 | 		break;
  4 | 	}
  5 | }

Output:
  1 | switch(foo) {
  2 | 	case 1:
  3 | 		break;
  4 | }

`;

exports[`switch-case-braces > invalid(5): switch(foo) {\n\tdefault: {{{\n\t\tdoSomething();\n\t}}}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	default: {{{
  3 | 		doSomething();
  4 | 	}}}
  5 | }

`;

exports[`switch-case-braces > invalid(5): switch(foo) {\n\tdefault: {{{\n\t\tdoSomething();\n\t}}}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default: {{{
    | 	         ^ Unnecessary braces in case clause.
  3 | 		doSomething();
  4 | 	}}}
  5 | }

Output:
  1 | switch(foo) {
  2 | 	default:{{
  3 | 		doSomething();
  4 | 	}}
  5 | }

`;

exports[`switch-case-braces > invalid(6): switch(foo) {\n\tdefault: {{{\n\t\tdoSomething();\n\t\t{\n\t\t\tdoSomethingElseInBlockStatement();\n\t\t}\n\t}}}\n} 1`] = `

Options:
- 'avoid'

Code:
  1 | switch(foo) {
  2 | 	default: {{{
  3 | 		doSomething();
  4 | 		{
  5 | 			doSomethingElseInBlockStatement();
  6 | 		}
  7 | 	}}}
  8 | }

`;

exports[`switch-case-braces > invalid(6): switch(foo) {\n\tdefault: {{{\n\t\tdoSomething();\n\t\t{\n\t\t\tdoSomethingElseInBlockStatement();\n\t\t}\n\t}}}\n} 2`] = `

Message:
  1 | switch(foo) {
> 2 | 	default: {{{
    | 	         ^ Unnecessary braces in case clause.
  3 | 		doSomething();
  4 | 		{
  5 | 			doSomethingElseInBlockStatement();
  6 | 		}
  7 | 	}}}
  8 | }

Output:
  1 | switch(foo) {
  2 | 	default:{{
  3 | 		doSomething();
  4 | 		{
  5 | 			doSomethingElseInBlockStatement();
  6 | 		}
  7 | 	}}
  8 | }

`;
